# fastbank

./: .gitignore  README.md  pyproject.toml
app/: constants.py  dependencies.py  main.py
app/celery/: app.py  schedules.py  tasks.py
app/config/: settings.py
app/database/: __init__.py  redis.py  session.py
app/middleware/: logging.py
app/models/: __init__.py  account.py  account_type.py  base.py  enums.py  interest_rule.py  loan.py  loan_repayment.py  loan_type.py  notification.py  tenant.py  transaction.py  user.py  user_identity.py
app/routers/: account.py  account_type.py  auth.py  interest_rule.py  loan.py  loan_type.py  notification.py  tenant.py  transaction.py  user.py  websocket.py
app/schemas/: account.py  account_type.py  auth.py  interest_rule.py  loan.py  loan_type.py  notification.py  tenant.py  transaction.py  user.py
app/services/: account_service.py  account_type_service.py  advance_loan_repayment_service.py  cascade_delete_service.py  email_service.py  interest_rule_service.py  loan_repayment_service.py  loan_service.py  loan_type_service.py  notification_service.py  tenant_service.py  transaction_service.py  user_service.py
app/tasks/: background_tasks.py
app/templates/: email_templates.py
app/utils/: email.py  jwt.py  logger.py  pagination.py  security.py  websocket_manager.py
migrations/: env.py
migrations/versions/: 0bb64a4cc196_added_loan_type_relation_and_decision_.py  3bdcd4a84a3d_add_loan_repayment_table.py  43cb57202658_relax_check_tenure_positive_constraint.py  62a55c99dcc1_initial_schema_with_correct_user_fields.py  (+12 more)
